# Templates

./: INSTALL.bat  feature.patch  readme.md
AddToPath/: compile.bat  gt.bat
AddToPath/Code/: find_amca.cpp
AddToPath/FilesToAddToPath/: gt.bat
AddToPath/utils/: TemplateDownloader.py
AllTemplates/c++/: .clangd  meson.build
AllTemplates/c++/Code/: main.cpp
AllTemplates/c++/Code/src/: tmp.hpp
AllTemplates/c++/MesonBuildStuff/: amca.py
AllTemplates/c++OpenGL/: .clang-format  meson.build
AllTemplates/c++OpenGL/Code/: main.cpp
AllTemplates/c++OpenGL/MesonBuildStuff/: .amca_deps_checked  amca.py
AllTemplates/c++OpenGL/src/include/: glad.c
Templates/c++/: .clang-format  meson.build
Templates/c++/Code/: main.cpp
amca_impl/: amca.bat  amca_runner.c  archiver.py  dearchiver.py  setpath.ps1
amca_impl/blueprints/c++/: .clangd  .gitignore  meson.build
amca_impl/blueprints/c++/include/: asyncprint.hpp  common.h
amca_impl/blueprints/c++/src/: main.cpp
amca_impl/snakes/: amca.py
amca_impl/src/: find_amca.cpp
amca_impl/templates/: c++OpenGL_blueprint.json  c++_blueprint.json
blueprints/c++/src/: main.cpp
blueprints/c++OpenGL/: meson.build
blueprints/c++OpenGL/MesonBuildStuff/: amca.py  amcaSetup.py
blueprints/c++OpenGL/src/: main.cpp
c++/Code/src/: tmp.h
c++/MesonBuildStuff/: amca.py  amcaSetup.py
